# recipe-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  neiroContext.txt
backend/: .dockerignore  .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 72dfc48e97a3_create_users_table.py  a1b2c3d4e5f7_add_avatar_url_and_recipe_photos.py  af66781aeaf9_create_recipes_table.py  be4c1adff2ba_create_refresh_tokens_table.py  c1a2b3d4e5f6_add_user_role.py  d2b3c4e5f6a1_create_categories_table.py  dea71c5c548c_initial.py  e3c4d5f6a1b2_add_category_to_recipes.py  f4d5e6f7a1b2_create_ingredients_tables.py  g5e6f7a8b1c2_create_likes_and_favorites_tables.py  h6f7a8b9c1d2_create_comments_table.py  i7a8b9c0d1e2_create_follows_table.py  j8b9c0d1e2f3_create_meal_plans_tables.py  k9c0d1e2f3a4_add_ingredient_categories.py  l0d1e2f3a4b5_create_shopping_lists_tables.py  m1e2f3a4b5c6_add_oauth_accounts.py  n2f3a4b5c6d7_add_admin_moderation.py  o3g4h5i6j7k8_add_notifications.py  (+1 more)
backend/app/: celery_app.py  main.py
backend/scripts/: check_alembic_heads.py  reindex_opensearch.py  seed_admin.py
backend/tests/: conftest.py  test_admin_service.py  test_auth_service.py  test_category_service.py  test_comment_service.py  test_follow_service.py  test_ingredient_service.py  test_like_service.py  test_meal_plan_service.py  test_recipe_service.py  test_search_service.py  test_shopping_list_service.py  test_user_service.py
(+265 files in other folders)
